get reviews fix

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,7 @@ application.security.jwt.expiration=86400000
 # 1 day in milliseconds
 application.security.jwt.refresh-token.expiration=604800000
 # 7 days in milliseconds
+
+
+logging.level.org.springframework.security=TRACE
+
