changes variable name from overview to content

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,4 +15,4 @@ application.security.jwt.refresh-token.expiration=604800000
 
 
 logging.level.org.springframework.security=TRACE
-
+spring.mvc.problemdetails.enabled=true
